--- a/settings.json
+++ b/settings.json
@@ -1,79 +1,77 @@
 {
-    "[python]":
-    {
-        "editor.bracketPairColorization.enabled": false,
-        "editor.guides.bracketPairs": false,
-        "editor.tabSize": 4
-    },
-    "editor.bracketPairColorization.enabled": true,
-    "editor.detectIndentation": false,
-    "editor.fontSize": 14,
-    "editor.guides.bracketPairs": true,
-    "editor.minimap.enabled": false,
-    "editor.multiCursorModifier": "ctrlCmd",
-    "editor.renderControlCharacters": true,
-    "editor.rulers":
-    [
-        80,
-        120
-    ],
-    "editor.showFoldingControls": "always",
-    "editor.snippetSuggestions": "top",
-    "editor.tabSize": 2,
-    "emmet.includeLanguages":
-    {
-        "erb": "html"
-    },
-    "emmet.showSuggestionsAsSnippets": true,
-    "emmet.triggerExpansionOnTab": true,
-    "explorer.confirmDelete": false,
-    "files.exclude":
-    {
-        "**/.DS_Store": true,
-        "**/.egg-info": true,
-        "**/.git": true,
-        ".asset-cache": true,
-        ".bundle": true,
-        ".ipynb_checkpoints": true,
-        ".pytest_cache": true,
-        ".sass-cache": true,
-        ".svn": true,
-        "__pycache__": true,
-        "_site": true,
-        "build": true,
-        "coverage": true,
-        "dist": true,
-        "log": true,
-        "node_modules": true,
-        "public/packs": true,
-        "tmp": true
-    },
-    "files.hotExit": "off",
-    "files.insertFinalNewline": true,
-    "files.trimFinalNewlines": true,
-    "files.trimTrailingWhitespace": true,
-    "files.watcherExclude":
-    {
-        "**/audits/**": true,
-        "**/coverage/**": true,
-        "**/log/**": true,
-        "**/node_modules/**": true,
-        "**/tmp/**": true,
-        "**/vendor/**": true
-    },
-    "git.enabled": false,
-    "python.defaultInterpreterPath": "~/.pyenv/shims/python",
-    "python.formatting.provider": "yapf",
-    "python.terminal.activateEnvironment": false,
-    "ruby.lint":
-    {
-        "rubocop": true
-    },
-    "telemetry.telemetryLevel": "off",
-    "window.restoreWindows": "none",
-    "workbench.iconTheme": "vscode-great-icons",
-    "workbench.settings.editor": "json",
-    "workbench.settings.openDefaultSettings": true,
-    "workbench.settings.useSplitJSON": true,
-    "workbench.startupEditor": "newUntitledFile"
+  "editor.bracketPairColorization.enabled" : true,
+  "window.restoreWindows" : "none",
+  "workbench.settings.openDefaultSettings" : true,
+  "explorer.confirmDelete" : false,
+  "git.enabled" : false,
+  "editor.snippetSuggestions" : "top",
+  "python.defaultInterpreterPath" : "~\/.pyenv\/shims\/python",
+  "files.exclude" : {
+    "node_modules" : true,
+    ".asset-cache" : true,
+    "__pycache__" : true,
+    "coverage" : true,
+    "dist" : true,
+    ".pytest_cache" : true,
+    "**\/.DS_Store" : true,
+    ".ipynb_checkpoints" : true,
+    "log" : true,
+    "**\/.egg-info" : true,
+    ".svn" : true,
+    "public\/packs" : true,
+    "_site" : true,
+    ".bundle" : true,
+    "tmp" : true,
+    "**\/.git" : true,
+    ".sass-cache" : true,
+    "build" : true
+  },
+  "editor.multiCursorModifier" : "ctrlCmd",
+  "files.watcherExclude" : {
+    "**\/log\/**" : true,
+    "**\/vendor\/**" : true,
+    "**\/node_modules\/**" : true,
+    "**\/audits\/**" : true,
+    "**\/tmp\/**" : true,
+    "**\/coverage\/**" : true
+  },
+  "workbench.settings.editor" : "json",
+  "files.hotExit" : "off",
+  "editor.detectIndentation" : false,
+  "[python]" : {
+    "editor.tabSize" : 4,
+    "editor.bracketPairColorization.enabled" : false,
+    "editor.guides.bracketPairs" : false
+  },
+  "files.insertFinalNewline" : true,
+  "emmet.triggerExpansionOnTab" : true,
+  "editor.guides.bracketPairs" : true,
+  "editor.minimap.enabled" : false,
+  "editor.renderControlCharacters" : true,
+  "ruby.lint" : {
+    "rubocop" : true
+  },
+  "files.trimFinalNewlines" : true,
+  "editor.fontSize" : 14,
+  "editor.tabSize" : 2,
+  "editor.showFoldingControls" : "always",
+  "telemetry.telemetryLevel" : "off",
+  "editor.accessibilitySupport" : "off",
+  "emmet.showSuggestionsAsSnippets" : true,
+  "files.trimTrailingWhitespace" : true,
+  "editor.rulers" : [
+    80,
+    120
+  ],
+  "workbench.startupEditor" : "newUntitledFile",
+  "emmet.includeLanguages" : {
+    "erb" : "html"
+  },
+  "python.formatting.provider" : "yapf",
+  "python.terminal.activateEnvironment" : false,
+  "workbench.iconTheme" : "vscode-great-icons",
+  "workbench.settings.useSplitJSON": true,
+  "terminal.integrated.env.osx": {
+    "FIG_NEW_SESSION": "1"
+  }
 }
